# BlitLib

./: CMakeLists.txt
src/: main.cpp
src/core/: Buffer2D.cpp  Buffer2D.h  Slice.cpp  Slice.h  Vec2.cpp  Vec2.h  types.hpp
src/graphics/: BitmapFile.cpp  BitmapFile.h  Color.cpp  Color.h  Draw.cpp  Draw.h  Image.cpp  Image.h  Sprite.cpp  Sprite.h
src/platform/: Console.cpp  Console.h  Framebuffer.cpp  Framebuffer.h  OSContext.cpp  OSContext.h  Window.cpp  Window.h
